@@ -8,6 +8,8 @@
     <string id="30105">then try switching to the secondary stream or vice-versa.</string>
     <string id="30106">Primær stream</string>
     <string id="30107">Sekundær stream</string>
+    <string id="30108">Warnings</string>
+    <string id="30109">Warn when not in Denmark</string>
 
     <string id="30110">Best (up to 2 mbit/s)</string>
     <string id="30111">High (1 mbit/s)</string>
@@ -36,6 +38,13 @@
     <string id="31200">24 Nordjyske</string>
     <string id="31201">Folketinget TV</string>
     <string id="31202">danskespil.dk Lotto</string>
+
+    <string id="99970">Warning!</string>
+    <string id="99971">It looks like you are not in Denmark.</string>
+    <string id="99972">One or more channels may not be playable</string>
+    <string id="99973">or other unexpected errors may occur.</string>
+    <string id="99974">OK</string>
+    <string id="99975">Don't show again</string>
 
     <string id="99980">Game over, man! [I]Game over![/I]</string>
     <string id="99981">You can't handle the truth!</string>
