@@ -14,5 +14,8 @@
         <setting id="drramasjang.stream" label="31005" type="enum" default="0" lvalues="30106|30107" />
         <setting id="drhd.stream" label="31006" type="enum" default="1" lvalues="30106|30107" />
     </category>
+    <category label="30108">
+        <setting id="warn.if.not.in.denmark" label="30109" type="bool" default="true" />
+    </category>
 </settings>
 
